--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigSendTransactionDialog.form
@@ -74,15 +74,6 @@
                       <text value="Logic Sig"/>
                     </properties>
                   </component>
-                  <component id="2ed2f" class="javax.swing.JTextField" binding="senderLogicSigTf">
-                    <constraints>
-                      <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                      <forms defaultalign-horz="false"/>
-                    </constraints>
-                    <properties/>
-                  </component>
                   <component id="93750" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -220,6 +211,13 @@
                     <properties>
                       <text value=" "/>
                     </properties>
+                  </component>
+                  <component id="8e503" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="senderLogicSigTextFieldWithBrowse" custom-create="true">
+                    <constraints>
+                      <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms/>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
